aanpassingen met css basisc opdracht
Ik heb mijn visitekaartje grotendeels aangepast naar de opdracht van css basics

--- a/index.html
+++ b/index.html
@@ -1,54 +1,46 @@
 <!DOCTYPE html>
 <html lang="nl">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>FDND Visitekaartje</title>
-    <link rel="stylesheet" href="styles/style.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Audiowide&display=swap"
-      rel="stylesheet"
-    />
-  </head>
-  <body>
-    <header>
-      <img src="assets/logo_groen-300x265.png" alt="personal logo van mij" />
 
-      <!-- <button>
-          <svg width="24" height="24" viewBox="0 0 24 24" stroke-width="1.5" stroke="#2c3e50" fill="none" stroke-linecap="round" stroke-linejoin="round">
-            <title>Wijzig layout</title>
-            <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
-            <path d="M4 8v-2a2 2 0 0 1 2 -2h2"></path>
-            <path d="M4 16v2a2 2 0 0 0 2 2h2"></path>
-            <path d="M16 4h2a2 2 0 0 1 2 2v2"></path>
-            <path d="M16 20h2a2 2 0 0 0 2 -2v-2"></path>
-          </svg>
-          <svg width="24" height="24" viewBox="0 0 24 24" stroke-width="1.5" stroke="red" fill="none" stroke-linecap="round" stroke-linejoin="round">
-            <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
-            <path d="M15 19v-2a2 2 0 0 1 2 -2h2"></path>
-            <path d="M15 5v2a2 2 0 0 0 2 2h2"></path>
-            <path d="M5 15h2a2 2 0 0 1 2 2v2"></path>
-            <path d="M5 9h2a2 2 0 0 0 2 -2v-2"></path>
-          </svg>
-        </button> -->
-    </header>
-    <article>
-      <figure>
-        <img src="assets/profielfoto-zw.jpg" alt="foto van mijzelf" />
-      </figure>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>FDND Visitekaartje</title>
+  <link rel="stylesheet" href="styles/style.css" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Audiowide&display=swap" rel="stylesheet" />
+</head>
 
-      <section>
-        <h2 class="glow">Over mij</h2>
-        <p>
-          Ik ben Tristan Katte, ik ben 24 jaar oud en woon in Montfoort. Ik heb
-          voor deze opleiding een korte tijd CMD gestudeerd aan de HVA en de
-          mbo-4 opleiding Webdesign gedaan op het Grafisch Lyceum Utrecht.
-        </p>
-      </section>
-    </article>
+<body>
+  <header>
+    <img src="assets/logo_groen-300x265.png" alt="personal logo van mij" />
 
-    <script src="scripts/script.js"></script>
-  </body>
+
+  </header>
+  <article>
+    <figure>
+      <img src="assets/profielfoto-zw.jpg" alt="foto van mijzelf" />
+      <figcaption>9 november 1998</figcaption>
+    </figure>
+
+
+    <section>
+
+      <h1 class="glow">Over mij</h1>
+      <p>
+        Ik ben Tristan Katte, ik ben 24 jaar oud en woon in Montfoort. Ik heb
+        voor deze opleiding een korte tijd CMD gestudeerd aan de HVA en de
+        mbo-4 opleiding Webdesign gedaan op het Grafisch Lyceum Utrecht.
+      </p>
+      <p>
+        Ik heb 1 oudere broer, 2 katten als huisdier en werk op zaterdag bij het bedrijf waar ik in de zomer
+        magazijnwerk doe. Verder doe ik aan fitness of ben ik aan het gamen als ik klaar ben met werk.
+      </p>
+      <button id="neon">Mijn vaardigheden</button>
+    </section>
+  </article>
+
+  <script src="scripts/script.js"></script>
+</body>
+
 </html>
