--- a/index.html
+++ b/index.html
@@ -12,21 +12,19 @@
 </head>
 
 <body>
-  <header>
-    <img src="assets/logo_groen-300x265.png" alt="personal logo van mij" />
 
-
-  </header>
   <article>
+  <section>
     <figure>
       <img src="assets/profielfoto-zw.jpg" alt="foto van mijzelf" />
-      <figcaption>9 november 1998</figcaption>
+      <figcaption class="typewriter">9 november 1998</figcaption>
     </figure>
+  </section>
 
 
     <section>
-
-      <h1 class="glow">Over mij</h1>
+      <img id="logo" src="assets/logo_groen-300x265.png" alt="personal logo van mij" />
+      <h1 class="glow" >Over mij</h1>
       <p>
         Ik ben Tristan Katte, ik ben 24 jaar oud en woon in Montfoort. Ik heb
         voor deze opleiding een korte tijd CMD gestudeerd aan de HVA en de
@@ -36,8 +34,18 @@
         Ik heb 1 oudere broer, 2 katten als huisdier en werk op zaterdag bij het bedrijf waar ik in de zomer
         magazijnwerk doe. Verder doe ik aan fitness of ben ik aan het gamen als ik klaar ben met werk.
       </p>
+      <h2>Mijn vaardigheden</h2>
+      <ul>
+        <li>Adobe Creative Cloud</li>
+        <li>Figma</li>
+        <li>HTML</li>
+        <li>CSS</li>
+        <li>Wordpress</li>
+        
+      </ul>
       <button id="neon">Mijn vaardigheden</button>
     </section>
+  
   </article>
 
   <script src="scripts/script.js"></script>
