transition toegevoegd met creative links bron
Mijn kaartje heeft een nav element met 3 a tags erin genest. deze links hebben een transition waarbij de border van boven naar onder gaat als erover gehoverd wordt.

--- a/index.html
+++ b/index.html
@@ -41,9 +41,16 @@
         <li>HTML</li>
         <li>CSS</li>
         <li>Wordpress</li>
+        <li>Jquery</li>
         
       </ul>
-      <button id="neon">Mijn vaardigheden</button>
+    
+<nav class="effect" id="effect">
+      <a href="mailto:tristankatte@hotmail.com">email</a>
+      <a href="mailto:tristankatte@hotmail.com">email</a> 
+      <a href="mailto:tristankatte@hotmail.com">email</a>  
+
+    </nav>
     </section>
   
   </article>
