laatste elementen toegevoegd
In mijn visitekaartje zijn de laatste elementen toegevoegd. deze moet ik nog met css op de juiste plek zetten

--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
     
 <nav class="effect" id="effect">
       <a href="mailto:tristankatte@hotmail.com">email</a>
-      <a href="mailto:tristankatte@hotmail.com">email</a> 
-      <a href="mailto:tristankatte@hotmail.com">email</a>  
+      <a href="#">email</a> 
+      <a href="#">email</a>  
 
     </nav>
     </section>
