--- a/index.html
+++ b/index.html
@@ -1,61 +1,63 @@
 <!DOCTYPE html>
 <html lang="nl">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>FDND Visitekaartje</title>
+    <link rel="stylesheet" href="styles/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Audiowide&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Audiowide&family=Work+Sans&display=swap" rel="stylesheet">
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>FDND Visitekaartje</title>
-  <link rel="stylesheet" href="styles/style.css" />
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link href="https://fonts.googleapis.com/css2?family=Audiowide&display=swap" rel="stylesheet" />
-</head>
+  <body>
+    <article>
+      <section>
 
-<body>
+        <figure>
+          <img src="assets/profielfoto-zw.jpg" alt="foto van mijzelf" />
+          <figcaption class="typewriter">9 november 1998</figcaption>
+        </figure>
+      </section>
 
-  <article>
-  <section>
-    <figure>
-      <img src="assets/profielfoto-zw.jpg" alt="foto van mijzelf" />
-      <figcaption class="typewriter">9 november 1998</figcaption>
-    </figure>
-  </section>
+      <section>
 
+        <h1 class="glow">Over mij</h1>
+        <p>
+          Ik ben Tristan Katte, ik ben 24 jaar oud en woon in Montfoort. Ik heb
+          voor deze opleiding een korte tijd CMD gestudeerd aan de HVA en de
+          mbo-4 opleiding Webdesign gedaan op het Grafisch Lyceum Utrecht.
+        </p>
+        <p>
+          Ik heb 1 oudere broer, 2 katten als huisdier en werk op zaterdag bij
+          het bedrijf waar ik in de zomer magazijnwerk doe. Verder doe ik aan
+          fitness of ben ik aan het gamen als ik klaar ben met werk.
+        </p>
+        <h2 class="glow">Mijn vaardigheden</h2>
+        <ul>
+          <li>Adobe Creative Cloud</li>
+          <li>Figma</li>
+          <li>HTML</li>
+          <li>CSS</li>
+          <li>Wordpress</li>
+        </ul>
 
-    <section>
-      <img id="logo" src="assets/logo_groen-300x265.png" alt="personal logo van mij" />
-      <h1 class="glow" >Over mij</h1>
-      <p>
-        Ik ben Tristan Katte, ik ben 24 jaar oud en woon in Montfoort. Ik heb
-        voor deze opleiding een korte tijd CMD gestudeerd aan de HVA en de
-        mbo-4 opleiding Webdesign gedaan op het Grafisch Lyceum Utrecht.
-      </p>
-      <p>
-        Ik heb 1 oudere broer, 2 katten als huisdier en werk op zaterdag bij het bedrijf waar ik in de zomer
-        magazijnwerk doe. Verder doe ik aan fitness of ben ik aan het gamen als ik klaar ben met werk.
-      </p>
-      <h2>Mijn vaardigheden</h2>
-      <ul>
-        <li>Adobe Creative Cloud</li>
-        <li>Figma</li>
-        <li>HTML</li>
-        <li>CSS</li>
-        <li>Wordpress</li>
-        <li>Jquery</li>
-        
-      </ul>
-    
-<nav class="effect" id="effect">
-      <a href="mailto:tristankatte@hotmail.com">email</a>
-      <a href="#">email</a> 
-      <a href="#">email</a>  
+        <nav class="effect" id="effect">
+          <a href="mailto:tristankatte@hotmail.com">e-mail</a>
+          <a href="#">Tel. 0644668217</a>
+          <a href="https://tristankatte.nl/nieuw_portfolio/" target="_blank"
+            >Mijn website</a
+          >
+        </nav>
+      </section>
+    </article>
 
-    </nav>
-    </section>
-  
-  </article>
-
-  <script src="scripts/script.js"></script>
-</body>
-
+    <script src="scripts/script.js"></script>
+  </body>
 </html>
